--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,14 +9,15 @@
    • Merge "Linguistics" menu and "Page" menu into "Notebook" menu
    • Improve look of settings dialog
    • Toggle affricate button to dynamically create affricates (ts -> t͡s)
-   • Fixed bug where dictionary wouldn't load if you opened a new notebook file when the dictionary was open
    • Pressing shift when inserting a character will insert it in uppercase
    • Tooltips now provide more detail (b̪ shows "Voiced labiodental stop")
-   • Character search
    • Expanded IPA to include many more characters and diacritics
    • Add extended Cyrillic & Greek
    • Add tab dedicated to suprasegmentals (a -> aː)
    • Default font for the editor is now Calibri, which displays Unicode better
+   • Fix bug in Export to HTML process when encountering empty cells in the dictionary window
+   • Fixed bug where dictionary wouldn't load if you opened a new notebook file when the dictionary was open
+   • Character search
    
 Version 9.3 (April 13, 2019)
    • Update to .NET Framework 4.7.2
